--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
         <title>Kwalis Website</title>
         <link rel="stylesheet" href="style.css">
     </head>
-<p>Kwalis Website</p>
-
-        <body> 
-        
-            <div>
-                <img src="https://cdn.prod.website-files.com/62bdc93e9cccfb43e155104c/654f7817f5f830d9b85341c3_Killua%2520PFP%2520for%2520Tiktok%252022.png" > 
-               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfc4IFXR2ksyeWT0BE-WHvgUTd3P2qj1HXJQ&s">
-                      <img src="https://i.ytimg.com/vi/9Mrz7m4ZwOA/mqdefault.jpg" >
+    <body> 
+     <!-- All content goes here -->
+        <div>
+           <nav>
+            <h1>Kwalis Website</h1>
+            <ul>
+                <li>
+                    <a href="index.html"> Home </a>
+                </li>
+                <li>
+                    <a href="portfolio.html"> Portfolio </a>
+                </li>
+            </ul>
+           </nav>     
+        <img src="https://cdn.prod.website-files.com/62bdc93e9cccfb43e155104c/654f7817f5f830d9b85341c3_Killua%2520PFP%2520for%2520Tiktok%252022.png" > 
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfc4IFXR2ksyeWT0BE-WHvgUTd3P2qj1HXJQ&s">
+        <img src="https://i.ytimg.com/vi/9Mrz7m4ZwOA/mqdefault.jpg" >
                  <main>
                     <p> Favorite Animals</p>
                     <h3>Dogs and Cats 
@@ -23,4 +32,4 @@
                         <h7>Playing Video Games/Listening To Music</h7>
                 </main>
         </body>
-</html>
+</html> 
